Refine Home layout spacing, center Our Team section, fix footer links, and update coordinators

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -229,8 +229,12 @@
     }
 }
 
+
 .highlights {
+    padding-bottom: 2rem !important;
+
     .hlgallery {
+
         display: grid;
         gap: 0.625rem;
         grid-template-columns: repeat(7, 1fr);
@@ -394,23 +398,21 @@
 
 // Last section -- Our team
 .coordinators {
+    padding-top: 2rem !important;
 
-    // Mobile-first: stacked centered layout
-    @media screen and (max-width: 800px) {
-        .sectionHeader {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+    .sectionHeader {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+
+        .heading {
+            flex-direction: row;
             text-align: center;
+            justify-content: center;
 
-            .heading {
-                flex-direction: row;
-                text-align: center;
-                justify-content: center;
-
-                span {
-                    margin-right: 0.3ch !important; // Override inline style
-                }
+            span {
+                margin-right: 0.3ch !important;
             }
         }
     }
@@ -427,10 +429,13 @@
             font-weight: 600;
             letter-spacing: -0.05rem;
             line-height: 0.9;
-            position: absolute;
-            bottom: 4.4rem;
-            bottom: calc(1.0 * var(--heading-font-size));
-            left: calc(1.4 * var(--heading-font-size));
+            position: static !important;
+            width: 100%;
+            text-align: center;
+            margin-top: 2rem;
+            padding: 0 1rem;
+            bottom: auto;
+            left: auto;
 
             >ul {
                 margin-bottom: 0.8rem;
